tests/_resources/error_gcns/E015_unknown_assumption.expected
error[E015]: Unknown assumption 'postive'. Found 'postive'
  --> E015_unknown_assumption.gcn:3:5
     |
   1 | # Typo in assumption name
   2 | assumptions {
   3 |     postive {
     |     ^^^^^^^ unknown assumption
   4 |         alpha;
   5 |     };
     |
   = note: Did you mean 'positive'?
   = note: Check spelling of assumption name
   = note: Valid assumptions: positive, negative, nonpositive, nonnegative, real, integer, finite
