tests/_resources/error_gcns/E015_unknown_assumption.gcn
# Typo in assumption name
assumptions {
    postive {
        alpha;
    };
};

block HOUSEHOLD {
    identities {
        Y[] = alpha * C[];
    };
};
